[gd_scene load_steps=13 format=2]

[ext_resource path="res://card.gd" type="Script" id=1]
[ext_resource path="res://card.png" type="Texture" id=2]
[ext_resource path="res://glow.png" type="Texture" id=3]
[ext_resource path="res://tools/CardEdit.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97, 59 )

[sub_resource type="Animation" id=5]
resource_name = "Correct"
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.431373, 1, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.121569, 0.847059, 0.219608, 1 ), Color( 0.121569, 0.847059, 0.219608, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Deselected"
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Hint"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2, 2.5, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2, 2.5, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.929412, 0.980392, 0.329412, 1 ), Color( 0.929412, 0.980392, 0.329412, 1 ), Color( 1, 1, 1, 1 ), Color( 0.929412, 0.980392, 0.329412, 1 ), Color( 0.929412, 0.980392, 0.329412, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Incorrect"
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.478431, 0.203922, 0.278431, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.847059, 0.137255, 0.121569, 1 ), Color( 0.847059, 0.137255, 0.121569, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Selected"
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Victory"
tracks/0/type = "value"
tracks/0/path = NodePath("Glow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Card" type="TextureButton"]
margin_right = 194.0
margin_bottom = 118.0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )

[node name="Glow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -53, -91 )
z_as_relative = false
texture = ExtResource( 3 )
centered = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 97, 59 )
shape = SubResource( 1 )

[node name="CountContainer" type="GridContainer" parent="."]
columns = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Correct = SubResource( 5 )
anims/Deselected = SubResource( 2 )
anims/Hint = SubResource( 8 )
anims/Incorrect = SubResource( 6 )
anims/RESET = SubResource( 3 )
anims/Selected = SubResource( 4 )
anims/Victory = SubResource( 7 )

[node name="EditButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -36.0
margin_bottom = 20.0
text = "Edit"

[node name="EditPanel" type="Panel" parent="."]
visible = false
margin_right = 195.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( -319, -19 )
script = ExtResource( 4 )

[node name="ColorOption" type="OptionButton" parent="EditPanel"]
margin_left = 4.0
margin_top = 12.0
margin_right = 79.0
margin_bottom = 32.0

[node name="ShapeOption" type="OptionButton" parent="EditPanel"]
margin_left = 4.0
margin_top = 36.0
margin_right = 79.0
margin_bottom = 56.0

[node name="PatternOption" type="OptionButton" parent="EditPanel"]
margin_left = 4.0
margin_top = 61.0
margin_right = 79.0
margin_bottom = 81.0

[node name="CountOption" type="OptionButton" parent="EditPanel"]
margin_left = 4.0
margin_top = 86.0
margin_right = 79.0
margin_bottom = 106.0

[node name="ApplyButton" type="Button" parent="EditPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -22.0
margin_right = -2.0
margin_bottom = -2.0
text = "Apply"

[connection signal="pressed" from="." to="." method="_on_Card_pressed"]
[connection signal="pressed" from="EditButton" to="EditPanel" method="_on_EditButton_pressed"]
[connection signal="pressed" from="EditPanel/ApplyButton" to="EditPanel" method="_on_ApplyButton_pressed"]
